# Appdaemon-Test-Framework

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pylintrc  .pylintrc-tests  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  appdaemon.yaml  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_standalone_appdaemon.sh  stream.sh  tox.ini
.circleci/: config.yml
.github/: dependabot-circleci.yml  dependabot.yml
.github/workflows/: ci.yml  pipwheel.yml  wheel.yml
appdaemontestframework/: README.md  TODO_on_this_branch.md  __init__.py  assert_that.py  automation_fixture.py  common.py  given_that.py  hass_mock.py  hass_mocks.py  init_framework.py  pytest_conftest.py  scheduler_mocks.py  time_travel.py  when.py
appdaemontestframework/appdaemon_mock/: __init__.py  appdaemon.py  mock_appdaemon.py  mock_scheduler.py  sccheduler.py  scheduler.py
appdaemontestframework/doc/: pytest_example.py
apps/: bathroom.py
conf/: Pipfile  appdaemon.yaml  conftest.py  requirements.txt
conf/appdaemon_test_framework/: __init__.py  assert_that.py  given.py  given_that.py  setup_hass.py  time_travel.py
conf/appdaemontestframework/: __init__.py  init_framework.py
conf/appdaemontestframework/doc/: unittest_example.py
conf/apps/: apps.yaml  automatic_lights.py  entity_ids.py  hello.py  kitchen.py  morning_routine.py  smart_bathroom.py  vanilla_file_to_experiment.py  washing_machine.py
conf/apps/tests/: test_smart_bathroom.py
conf/tests/: test_automatic_lights.py  test_kitchen.py  test_smart_bathroom.py  test_vanilla_file.py
doc/: pytest_example.py  unittest_example.py
doc/full_example/: Pipfile  conftest.py  pyproject.toml  start_tdd.sh
doc/full_example/tests/: test_bathroom.py
examples/: pytest_example.py  unittest_example.py
examples/app_examples/app_tests/: test_assertions_dsl.py  test_bathroom.py  test_kitchen.py
examples/app_examples/apps/: apps.yaml  bathroom.py  entity_ids.py  kitchen.py
test/: test_assert_callback_registration.py  test_assert_that.py  test_automation_fixture.py  test_extra_hass_functions.py  test_given_that.py  test_logging.py  test_miscellaneous_helper_functions.py  test_scheduler_mocks.py  test_state.py  test_time_travel.py  test_with_arguments.py
test/appdaemon_mock/: test_scheduler.py
test/integration_tests/apps/: entity_ids.py  kitchen.py
test/integration_tests/tests/: test_bathroom.py  test_kitchen.py  test_vanilla_file.py
tests/: test_assert_callback_registration.py  test_assert_that.py  test_automation_fixture.py  test_events.py  test_extra_hass_functions.py  test_kitchen.py  test_logging.py  test_miscellaneous_helper_functions.py  test_state.py  test_time_travel.py  test_when.py  test_with_arguments.py
tests/appdaemon_mock/: test_scheduler.py
