[tool.poetry]
name = "Appdaemon-Test-Framework"
version = "4.0.0"
description = ""
authors = ["Flo Kempenich <flo@kempenich.dev>"]
packages = [{include = "appdaemontestframework"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
appdaemon = { git = "https://github.com/LuisMunozVillarreal/appdaemon.git", rev = "364ce8f078667520fec77b99e27f22a5ee6459a9" }

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
flake8 = "7.0.0"
flake8-isort = "6.1.1"
ipython = "8.22.2"
ipdb = "0.13.13"
mypy = "1.9.0"
pydocstyle = "6.3.0"
pylint = "3.1.0"
pytest = "8.1.1"
pytest-asyncio = "0.23.5.post1"
pytest-cov = "4.1.0"
pytest-mock = "3.12.0"
pytest-xdist = "3.5.0"
tox = "4.14.1"
types-pytz = "2024.1.0.20240203"

[tool.black]
line-length = 79

[tool.pydocstyle]
convention = "google"
match = ".*\\.py"
add-ignore = "D107,D104,D106"
