[tool.poetry]
name = "Appdaemon-Test-Framework"
version = "4.0.0"
description = ""
authors = ["Flo Kempenich <flo@kempenich.dev>"]
packages = [{include = "appdaemontestframework"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
appdaemon = { git = "https://github.com/LuisMunozVillarreal/appdaemon.git", rev = "364ce8f078667520fec77b99e27f22a5ee6459a9" }

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
flake8 = "7.1.0"
flake8-isort = "6.1.1"
ipython = "8.25.0"
ipdb = "0.13.13"
mypy = "1.10.0"
pydocstyle = "6.3.0"
pylint = "3.2.3"
pytest = "8.2.2"
pytest-asyncio = "0.23.7"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
pytest-xdist = "3.6.1"
tox = "4.15.1"
types-pytz = "2024.1.0.20240417"

[tool.black]
line-length = 79

[tool.pydocstyle]
convention = "google"
match = ".*\\.py"
add-ignore = "D107,D104,D106"
